--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,7 +44,14 @@
 		</div>
 	</div>
 
-  <div class="row" style="margin-bottom: 35%; margin-top: 15%" data-aos="fade-up" data-aos-duration="2000">
+	<div class="row center align" style="margin-top: 20%;" data-aos="fade-up" data-aos-duration="2500">
+		<i class="material-icons" style="font-size: 75px; height: auto;">language</i>
+		<h4>Connect With Us!</h4>
+	  <a style="margin-top: 3%; background-color: darkblue; color: white" target="_blank" href="https://www.facebook.com/DreamThinkAchieveCleaning/" class="waves-effect waves-light btn col s12 social facebook">
+	  <i class="fa fa-facebook"></i> Follow Our Facebook Community!!!</a>
+	</div>
+
+  <div class="row" style="margin-bottom: 35%; margin-top: 25%" data-aos="fade-up" data-aos-duration="2000">
     <div class="col s12" align="center"><%= link_to "Book Us Now!!!", new_contact_path, class: "btn waves-effect waves-light pulse", style: "background-color: white; color: black;" %></div>
   </div>
 
