--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -27,7 +27,7 @@
         		</h4>
 
         		<ul align="center" style="list-style-type: none;">
-        			<li><a style="background-color: hotpink; color: black;" href="#" target="_blank" class="waves-effect waves-light btn-floating btn-large social instagram"> <i class="fa fa-instagram"></i>Instagram</a></li>
+        			<li><a style="background-color: darkblue; color: black;" href="https://www.facebook.com/DreamThinkAchieveCleaning/" target="_blank" class="waves-effect waves-light btn-floating btn-large social facebook"> <i class="fa fa-facebook"></i>Facebook</a></li>
                     
         		</ul>
         	</div>
